--- a/vs.proj/NppPluginTemplate.vcxproj
+++ b/vs.proj/NppPluginTemplate.vcxproj
@@ -27,26 +27,35 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\DockingFeature\Docking.h" />
-    <ClInclude Include="..\src\DockingFeature\DockingDlgInterface.h" />
-    <ClInclude Include="..\src\DockingFeature\dockingResource.h" />
-    <ClInclude Include="..\src\DockingFeature\resource.h" />
-    <ClInclude Include="..\src\DockingFeature\StaticDialog.h" />
-    <ClInclude Include="..\src\DockingFeature\Window.h" />
-    <ClInclude Include="..\src\menuCmdID.h" />
-    <ClInclude Include="..\src\Notepad_plus_msgs.h" />
-    <ClInclude Include="..\src\PluginDefinition.h" />
-    <ClInclude Include="..\src\PluginInterface.h" />
-    <ClInclude Include="..\src\Scintilla.h" />
-    <ClInclude Include="..\src\Sci_Position.h" />
+    <ClInclude Include="..\src\Commands\CommandShowHide.h" />
+    <ClInclude Include="..\src\MapPreviewPlugin.h" />
+    <ClInclude Include="..\src\MapPreviewResources.h" />
+    <ClInclude Include="..\src\MapPreviewWindow.h" />
+    <ClInclude Include="..\src\NppPlugin\DockingFeature\Docking.h" />
+    <ClInclude Include="..\src\NppPlugin\DockingFeature\DockingDlgInterface.h" />
+    <ClInclude Include="..\src\NppPlugin\DockingFeature\dockingResource.h" />
+    <ClInclude Include="..\src\NppPlugin\DockingFeature\resource.h" />
+    <ClInclude Include="..\src\NppPlugin\DockingFeature\StaticDialog.h" />
+    <ClInclude Include="..\src\NppPlugin\DockingFeature\Window.h" />
+    <ClInclude Include="..\src\NppPlugin\menuCmdID.h" />
+    <ClInclude Include="..\src\NppPlugin\Notepad_plus_msgs.h" />
+    <ClInclude Include="..\src\NppPlugin\NppPlugin.h" />
+    <ClInclude Include="..\src\NppPlugin\PluginDefinition.h" />
+    <ClInclude Include="..\src\NppPlugin\PluginInterface.h" />
+    <ClInclude Include="..\src\NppPlugin\Scintilla.h" />
+    <ClInclude Include="..\src\NppPlugin\Sci_Position.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\DockingFeature\StaticDialog.cpp" />
-    <ClCompile Include="..\src\NppPluginMain.cpp" />
-    <ClCompile Include="..\src\PluginDefinition.cpp" />
+    <ClCompile Include="..\src\Commands\CommandShowHide.cpp" />
+    <ClCompile Include="..\src\MapPreviewPlugin.cpp" />
+    <ClCompile Include="..\src\MapPreviewWindow.cpp" />
+    <ClCompile Include="..\src\NppPlugin\DockingFeature\StaticDialog.cpp" />
+    <ClCompile Include="..\src\NppPlugin\NppPluginMain.cpp" />
+    <ClCompile Include="..\src\NppPlugin\PluginDefinition.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="..\src\NppPluginMain.rc" />
+    <ResourceCompile Include="..\src\MapPreviewWindow.rc" />
+    <ResourceCompile Include="..\src\NppPlugin\NppPluginMain.rc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{9D04DBD5-E12E-44E0-A683-6F43F21D533B}</ProjectGuid>
