--- a/vs.proj/NppPluginTemplate.vcxproj.filters
+++ b/vs.proj/NppPluginTemplate.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="..\src\Models\FileTreeItem.h">
       <Filter>Models</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\Gui\MpFileTvToolbar.h">
+      <Filter>Gui</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\NppPlugin\NppPluginMain.cpp">
@@ -165,6 +168,9 @@
     </ClCompile>
     <ClCompile Include="..\src\Models\FileTreeItem.cpp">
       <Filter>Models</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Gui\MpFileTvToolbar.cpp">
+      <Filter>Gui</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
