Add file empty window

--- a/vs.proj/NppPluginTemplate.vcxproj
+++ b/vs.proj/NppPluginTemplate.vcxproj
@@ -28,7 +28,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\Commands\CommandShowHide.h" />
-    <ClInclude Include="..\src\Gui\MpFileTvToolbar.h" />
+    <ClInclude Include="..\src\Gui\MpFileAddWindow.h">
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Qt\6.3.2\msvc2019_64\bin\moc.exe "%(FullPath)" -o "%(RootDir)%(Directory)moc_%(Filename).cpp"</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compiling %(Filename).%(Extension) using MOC</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">%(RootDir)%(Directory)moc_%(Filename).cpp</Outputs>
+    </ClInclude>
+    <CustomBuild Include="..\src\Gui\MpFileTvToolbar.h">
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Qt\6.3.2\msvc2019_64\bin\moc.exe "%(FullPath)" -o "%(RootDir)%(Directory)moc_%(Filename).cpp"</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compiling %(Filename).%(Extension) using MOC</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">%(RootDir)%(Directory)moc_%(Filename).cpp</Outputs>
+    </CustomBuild>
     <ClInclude Include="..\src\Gui\MpInfoToolbar.h" />
     <ClInclude Include="..\src\Gui\MpFileTreeview.h" />
     <CustomBuild Include="..\src\Gui\MpMainToolbar.h">
@@ -127,8 +136,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\Commands\CommandShowHide.cpp" />
+    <ClCompile Include="..\src\Gui\moc_MpFileTvToolbar.cpp" />
     <ClCompile Include="..\src\Gui\moc_MpMainToolbar.cpp" />
     <ClCompile Include="..\src\Gui\moc_MpMainWindow.cpp" />
+    <ClCompile Include="..\src\Gui\MpFileAddWindow.cpp" />
     <ClCompile Include="..\src\Gui\MpFileTvToolbar.cpp" />
     <ClCompile Include="..\src\Gui\MpInfoToolbar.cpp" />
     <ClCompile Include="..\src\Gui\MpFileTreeview.cpp" />
