--- a/vs.proj/NppPluginTemplate.vcxproj
+++ b/vs.proj/NppPluginTemplate.vcxproj
@@ -28,11 +28,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\Commands\CommandShowHide.h" />
-    <ClInclude Include="..\src\Gui\MpFileAddWindow.h">
+    <CustomBuild Include="..\src\Gui\MpFileAddWindow.h">
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Qt\6.3.2\msvc2019_64\bin\moc.exe "%(FullPath)" -o "%(RootDir)%(Directory)moc_%(Filename).cpp"</Command>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compiling %(Filename).%(Extension) using MOC</Message>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">%(RootDir)%(Directory)moc_%(Filename).cpp</Outputs>
-    </ClInclude>
+    </CustomBuild>
     <CustomBuild Include="..\src\Gui\MpFileTvToolbar.h">
       <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">C:\Qt\6.3.2\msvc2019_64\bin\moc.exe "%(FullPath)" -o "%(RootDir)%(Directory)moc_%(Filename).cpp"</Command>
       <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compiling %(Filename).%(Extension) using MOC</Message>
@@ -60,6 +60,7 @@
     <ClInclude Include="..\src\MapPreviewWindow.h" />
     <ClInclude Include="..\src\Models\FileTreeItem.h" />
     <ClInclude Include="..\src\Models\FileTreeModel.h" />
+    <ClInclude Include="..\src\Models\NppFilesList.h" />
     <ClInclude Include="..\src\NppPlugin\DockingFeature\Docking.h" />
     <ClInclude Include="..\src\NppPlugin\DockingFeature\DockingDlgInterface.h" />
     <ClInclude Include="..\src\NppPlugin\DockingFeature\dockingResource.h" />
@@ -69,6 +70,7 @@
     <ClInclude Include="..\src\NppPlugin\menuCmdID.h" />
     <ClInclude Include="..\src\NppPlugin\Notepad_plus_msgs.h" />
     <ClInclude Include="..\src\NppPlugin\NppPlugin.h" />
+    <ClInclude Include="..\src\NppPlugin\NppProxy.h" />
     <ClInclude Include="..\src\NppPlugin\PluginDefinition.h" />
     <ClInclude Include="..\src\NppPlugin\PluginInterface.h" />
     <ClInclude Include="..\src\NppPlugin\Scintilla.h" />
@@ -136,6 +138,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\Commands\CommandShowHide.cpp" />
+    <ClCompile Include="..\src\Gui\moc_MpFileAddWindow.cpp" />
     <ClCompile Include="..\src\Gui\moc_MpFileTvToolbar.cpp" />
     <ClCompile Include="..\src\Gui\moc_MpMainToolbar.cpp" />
     <ClCompile Include="..\src\Gui\moc_MpMainWindow.cpp" />
@@ -153,8 +156,10 @@
     <ClCompile Include="..\src\MapPreviewWindow.cpp" />
     <ClCompile Include="..\src\Models\FileTreeItem.cpp" />
     <ClCompile Include="..\src\Models\FileTreeModel.cpp" />
+    <ClCompile Include="..\src\Models\NppFilesList.cpp" />
     <ClCompile Include="..\src\NppPlugin\DockingFeature\StaticDialog.cpp" />
     <ClCompile Include="..\src\NppPlugin\NppPluginMain.cpp" />
+    <ClCompile Include="..\src\NppPlugin\NppProxy.cpp" />
     <ClCompile Include="..\src\NppPlugin\PluginDefinition.cpp" />
     <ClCompile Include="..\src\QtMfc\moc_qmfcapp.cpp" />
     <ClCompile Include="..\src\QtMfc\moc_qwinhost.cpp" />
