--- a/vs.proj/NppPluginTemplate.vcxproj.filters
+++ b/vs.proj/NppPluginTemplate.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClInclude Include="..\src\NppPlugin\NppProxy.h">
       <Filter>NppPlugin</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\Models\FileHelper.h">
+      <Filter>Models</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\NppPlugin\NppPluginMain.cpp">
@@ -189,6 +192,9 @@
     </ClCompile>
     <ClCompile Include="..\src\NppPlugin\NppProxy.cpp">
       <Filter>NppPlugin</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Models\FileHelper.cpp">
+      <Filter>Models</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
