Add extension button

--- a/vs.proj/NppPluginTemplate.vcxproj.filters
+++ b/vs.proj/NppPluginTemplate.vcxproj.filters
@@ -226,4 +226,7 @@
       <Filter>Gui</Filter>
     </CustomBuild>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
+  </ItemGroup>
 </Project>
