--- a/vs.proj/NppPluginTemplate.vcxproj.filters
+++ b/vs.proj/NppPluginTemplate.vcxproj.filters
@@ -114,7 +114,7 @@
     <ClInclude Include="..\src\Models\GeoLayer.h">
       <Filter>Models</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\Enums\FileExtType.h">
+    <ClInclude Include="..\src\Enums\GeoExtType.h">
       <Filter>Enums</Filter>
     </ClInclude>
   </ItemGroup>
